--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,9 +1,14 @@
-<!-- Cart -->
-	<section class="cart bgwhite p-t-70 p-b-100" id="cartSection">
+
+<section class="cart bgwhite p-t-70 p-b-100" id="cartSection">
 		<div class="container">
-			<!-- Cart item -->
-			<div class="container-table-cart pos-relative">
-				<div class="wrap-table-shopping-cart bgwhite">
+			<div class="">
+        <div class="text-center p-5 m-auto" [hidden]="items.length">
+          <h4 class="text-bold">No ITems In Cart!</h4>
+          <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4 p-2 mt-3" (click)="navigateTo('/store')">
+          Go to store
+        </button>
+        </div>
+				<div class="wrap-table-shopping-cart bgwhite" [hidden]="!items.length">
 					<table class="table-shopping-cart">
 						<tr class="table-head">
 							<th class="column-1"></th>
@@ -12,98 +17,77 @@
 							<th class="column-4 p-l-70">Quantity</th>
 							<th class="column-5">Total</th>
 						</tr>
-
-						<tr class="table-row">
+            
+						<tr class="table-row" *ngFor="let item of items; let i = index;">
 							<td class="column-1">
 								<div class="cart-img-product b-rad-4 o-f-hidden">
-									<img src="assets/images/911HN_01_500x500.jpg" alt="IMG-PRODUCT">
+									<img [src]="item.imgUrl" alt="IMG-PRODUCT">
 								</div>
 							</td>
-							<td class="column-2">911 Help Now</td>
-							<td class="column-3">$89.95</td>
+							<td class="column-2">{{item.productName}}</td>
+							<td class="column-3">${{item.price}}</td>
 							<td class="column-4">
 								<div class="flex-w bo5 of-hidden w-size17">
-									<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
+									<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2" (click)="decreaseQuantity(i)">
 										<i class="fs-12 fa fa-minus" aria-hidden="true"></i>
 									</button>
 
-									<input class="size8 m-text18 t-center num-product" type="number" name="num-product1" value="1">
+									<span class="pt-2 size8 m-text18 t-center num-product">{{item.options.quantity}}</span>
 
-									<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
+									<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2" (click)="increaseQuantity(i)">
 										<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
 									</button>
 								</div>
 							</td>
-							<td class="column-5">$89.95</td>
-						</tr>
-
-						<tr class="table-row">
-							<td class="column-1">
-								<div class="cart-img-product b-rad-4 o-f-hidden">
-									<img src="assets/images/smartgo_BLK_front_shadow_500x.png" alt="IMG-PRODUCT">
-								</div>
-							</td>
-							<td class="column-2">Smartgo waterproof personal alert</td>
-							<td class="column-3">$44.95</td>
-							<td class="column-4">
-								<div class="flex-w bo5 of-hidden w-size17">
-									<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
-										<i class="fs-12 fa fa-minus" aria-hidden="true"></i>
-									</button>
-
-									<input class="size8 m-text18 t-center num-product" type="number" name="num-product2" value="1">
-
-									<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
-										<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
-									</button>
-								</div>
-							</td>
-							<td class="column-5">$44.95</td>
+							<td class="column-5">{{getItemTotal(item) | currency}}</td>
+							<td class="column-5">
+                <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="removeItemFromCart(userId, item)">
+							<i class="fa fa-times"></i> Delete
+						</button>
+              </td>
 						</tr>
 					</table>
 				</div>
 			</div>
 
-			<div class="flex-w flex-sb-m p-t-25 p-b-25 bo8 p-l-35 p-r-60 p-lr-15-sm">
+			<div [hidden]="!items.length" class="flex-w flex-sb-m p-t-25 p-b-25 bo8 p-l-35 p-r-60 p-lr-15-sm">
 				<div class="flex-w flex-m w-full-sm">
 					<div class="size11 bo4 m-r-10">
-						<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="coupon-code" placeholder="Coupon Code">
+						<input #coupon class="sizefull s-text7 p-l-22 p-r-22" type="text" name="coupon-code" placeholder="Coupon Code">
 					</div>
 
 					<div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
-						<!-- Button -->
-						<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+						<button [hidden]="couponUsed" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="applyCoupon(coupon.value)">
 							Apply coupon
 						</button>
 					</div>
 				</div>
 
 				<div class="size10 trans-0-4 m-t-10 m-b-10">
-					<!-- Button -->
-					<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
-						Update Cart
+					<button [hidden]="!coupon.value" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="removeCoupon(coupon.value)">
+						Remove Coupon
 					</button>
 				</div>
 			</div>
 
-			<!-- Total -->
-			<div class="bo9 w-size18 p-l-40 p-r-40 p-t-30 p-b-38 m-t-30 m-r-0 m-l-auto p-lr-15-sm">
+			<div [hidden]="!items.length" class="bo9 w-size18 p-l-40 p-r-40 p-t-30 p-b-38 m-t-30 m-r-0 m-l-auto p-lr-15-sm">
 				<h5 class="m-text20 p-b-24">
 					Cart Totals
 				</h5>
 
-				<!--  -->
 				<div class="flex-w flex-sb-m p-b-12">
 					<span class="s-text18 w-size19 w-full-sm">
 						Subtotal:
 					</span>
 
-					<span class="m-text21 w-size20 w-full-sm">
-						$145.00
+					<span [hidden]="couponUsed" class="m-text21 w-size20 w-full-sm">
+						{{getCartSubtotal(items) | currency}}
+          </span>
+          <span [hidden]="!couponUsed" class="m-text21 w-size20 w-full-sm">
+						{{getDiscountTotal(coupon.value) | currency}}&nbsp; <i class="fa fa-dollar text-primary"></i> Coupon
 					</span>
 				</div>
 
-				<!--  -->
 				<div class="flex-w flex-sb bo10 p-t-15 p-b-20">
 					<span class="s-text18 w-size19 w-full-sm">
 						Shipping:
@@ -119,7 +103,7 @@
 						</span>
 
 						<div class="rs2-select2 rs3-select2 rs4-select2 bo4 of-hidden w-size21 m-t-8 m-b-12">
-							<select class="selection-2" name="country">
+							<select class="selection-2" name="country" style="width: 100%;">
 								<option>Select a country...</option>
 								<option>US</option>
 								<option>UK</option>
@@ -136,29 +120,34 @@
 						</div>
 
 						<div class="size14 trans-0-4 m-b-10">
-							<!-- Button -->
-							<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+							<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="updateTotals(userId, .075)">
 								Update Totals
 							</button>
 						</div>
 					</div>
 				</div>
 
-				<!--  -->
 				<div class="flex-w flex-sb-m p-t-26 p-b-30">
 					<span class="m-text22 w-size19 w-full-sm">
 						Total:
 					</span>
 
-					<span class="m-text21 w-size20 w-full-sm">
-						$145.00
+					<span [hidden]="couponUsed" class="m-text21 w-size20 w-full-sm">
+						{{getCartSubtotal(items) | currency: 'us'}}
+          </span>
+          <span [hidden]="!couponUsed" class="m-text21 w-size20 w-full-sm">
+						{{getDiscountTotal(coupon.value) | currency: ''}}&nbsp; <i class="fa fa-dollar text-primary"></i> Coupon Discount {{cart?.coupon?.couponCode}}
 					</span>
 				</div>
 
-				<div class="size15 trans-0-4">
-					<!-- Button -->
-					<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+				<div class="size15 trans-0-4 m-b-10">
+					<button disabled="subtotal === 0" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="updateCart(userId, cart);navigateTo('/checkout')">
 						Proceed to Checkout
+					</button>
+        </div>
+        <div class="size15 trans-0-4">
+					<button class="flex-c-m sizefull bg-primary bo-rad-23 hov1 s-text1 trans-0-4" (click)="navigateTo('/store')">
+						Continue Shopping
 					</button>
 				</div>
 			</div>
