--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,5 +1,10 @@
 <!-- Hero Section-->
-    <section class="hero" style="background-image: url(assets/images/faq-bg.jpg);">
+    <section class="hero"
+    #hero
+  appParallax
+  #p="mouseParallax"
+  (mousemove)="p.mouseMoved($event, hero)"
+    style="background-image: url(assets/images/faq-bg.jpg);">
       <div class="container text-center">
         <!-- breadcrumb-->
         <nav aria-label="breadcrumb" class="d-flex justify-content-center">
