--- a/src/app/shared/carousel/carousel.component.html
+++ b/src/app/shared/carousel/carousel.component.html
@@ -1,3 +1,12 @@
-<p>
-  carousel works!
-</p>
+<owl-carousel-o [options]="options" (changed)="getData($event)">
+  <ng-container *ngFor="let slide of slidesStore">
+    <ng-template carouselSlide>
+      <img
+        [src]="slide.src"
+        [alt]="slide.alt"
+        [title]="slide.title"
+        [width]="slide.size.width"
+      />
+    </ng-template>
+  </ng-container>
+</owl-carousel-o>
