--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -1,21 +1,23 @@
 <!-- Divider Section-->
-<section [ngClass]="dividerColors.bgColor">
+<section [ngClass]="dividerColors?.bgColor">
   <div class="container">
     <div class="text-center">
-      <h2 [ngClass]="dividerColors.title">
-        {{ dividerContent.title }}
-        <i class="fa" [ngClass]="dividerContent.icon"></i>
+      <h2 [ngClass]="dividerColors?.title">
+        {{ dividerContent?.title }}
+        <i class="fa" [ngClass]="dividerContent?.icon"></i>
       </h2>
       <div class="row">
         <div class="col-lg-9 mx-auto">
           <p
             class="lead mt-2"
-            [ngClass]="dividerColors.text"
-            [innerHTML]="dividerContent.text"
+            [ngClass]="dividerColors?.text"
+            [innerHTML]="dividerContent?.text"
           ></p>
         </div>
       </div>
-      <a href="#" class="btn" [ngClass]="dividerColors.cta">Learn More</a>
+      <button class="btn" [ngClass]="dividerColors?.cta">
+        Learn More
+      </button>
     </div>
   </div>
 </section>
