--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -212,9 +212,9 @@
           <div *ngSwitchCase="'account'">
             <h6 class="card-header"> Account </h6>
             <!-- .card-body -->
-            <div class="card-body" *ngIf="user as u">
+            <div class="card-body">
               <!-- form -->
-              <form #account name="accountForm">
+              <form #account>
                 <!-- form row -->
                 <div class="form-row">
                   <!-- form column -->
